--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,7 +26,9 @@
         </p>
         <p> {{ form.submit()}} </p>
     </form>
-
+    <p>New User? 
+        <a href="{{ url_for('register') }}">Click to Register!</a>
+    </p>
 {% endblock %}
 
 
