--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% if title %}
-        <title>{{ title }} - Microblog</title>
+    <title>{{ title }} - Microblog</title>
     {% else %}
-        <title>Welcome to Microblog!</title>
+    <title>Welcome to Microblog!</title>
     {% endif %}
 </head>
+
 <body>
-    <div>Microblog: 
+    <div>Microblog:
         <a href="{{ url_for('index') }}">Home</a>
         {% if current_user.is_anonymous %}
-            <a href="{{ url_for('login') }}">Login</a>  
+        <a href="{{ url_for('login') }}">Login</a>
         {% else %}
-            <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-            <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+        <a href="{{ url_for('explore')}}">Explore</a>
+        <a href="{{ url_for('logout') }}">Logout</a>
         {% endif %}
     </div>
     <hr>
@@ -24,8 +27,8 @@
     {% if messages %}
     <ul>
         {% for message in messages %}
-                <li>{{ message }}</li>
-        {% endfor %}       
+        <li>{{ message }}</li>
+        {% endfor %}
     </ul>
     {% endif %}
     {% endwith %}
@@ -33,4 +36,5 @@
     {% block content %}
     {% endblock %}
 </body>
+
 </html>
